# pulsar

./: README.md  pulsar_tutorial.ipynb  pyproject.toml
src/pulsar/: collector.py  dashboard.py  facts.py  snapshot.py
